--- a/index.html
+++ b/index.html
@@ -1,1 +1,110 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ejercicios HTML</title>
+    <style>
+        body 
+            {font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;}
+        
+        #datos 
+            {background-color: #ffccff; /* Color de fondo elegido */
+            padding: 20px;
+            text-align: center;
+            color: #333;}
 
+        #ejercicios-html 
+            {background-color: #ffebcd;
+            padding: 20px;
+            font-family: 'Courier New', Courier, monospace;}
+
+        #ejercicios-html h2 
+            {color: #333;
+            text-align: center;}
+
+        #ejercicios-html ul
+            {list-style-type: none;
+            padding: 0;
+            text-align: left;}
+
+        #ejercicios-html li 
+            {margin: 10px 0;}
+
+        #ejercicios-html a 
+            {text-decoration: none;
+            color: #0066cc;}
+
+        #ejercicios-html a:hover 
+            {color: #ff6600;
+            text-decoration: underline;}
+
+        #ejercicios-css 
+            {background-color: #d3f8e2;
+            padding: 20px;
+            font-family: 'Verdana', sans-serif;}
+
+        #ejercicios-css h2 
+            {color: #333;
+            text-align: center;}
+
+        #ejercicios-css ul
+            {list-style-type: none;
+            padding: 0;
+            text-align: left;}
+
+        #ejercicios-css li 
+            {margin: 10px 0;}
+
+        #ejercicios-css a
+            {text-decoration: none;
+            color: #0066cc;}
+
+        #ejercicios-css a:hover
+            {color: #ff6600;
+            text-decoration: underline;}
+    </style>
+</head>
+<body>
+
+    <div class="section" id="datos">
+        <h1>Mis Datos</h1>
+        <p>Soy Oscar Ioo. Esta página contiene enlaces a los ejercicios realizados sobre HTML y CSS.</p>
+        <img src="imagen.jpg" alt="Imagen de presentación">
+    </div>
+
+    <div class="section" id="ejercicios-html">
+        <h2>Ejercicios Introducción HTML</h2>
+        <ul>
+            <li><a href="ejercicios_html/ejercicio_1.html">Ejercicio 1</a></li>
+            <li><a href="ejercicios_html/ejercicio_2.html">Ejercicio 2</a></li>
+            <li><a href="ejercicios_html/ejercicio_3.html">Ejercicio 3</a></li>
+            <li><a href="ejercicios_html/ejercicio_4.html">Ejercicio 4</a></li>
+            <li><a href="ejercicios_html/ejercicio_5.html">Ejercicio 5</a></li>
+            <li><a href="ejercicios_html/ejercicio_6.html">Ejercicio 6</a></li>
+            <li><a href="ejercicios_html/ejercicio_6.1.html">Ejercicio 6.1</a></li>
+            <li><a href="ejercicios_html/ejercicio_7.html">Ejercicio 7</a></li>
+        </ul>
+    </div>
+
+    <div class="section" id="ejercicios-css">
+        <h2>Ejercicios Introducción a CSS</h2>
+        <ul>
+            <li><a href="ejercicios_css/ejercicio_8.html">Ejercicio 8</a></li>
+            <li><a href="ejercicios_css/ejercicio_9.html">Ejercicio 9</a></li>
+            <li><a href="ejercicios_css/ejercicio_10.html">Ejercicio 10</a></li>
+            <li><a href="ejercicios_css/ejercicio_11.html">Ejercicio 11</a></li>
+            <li><a href="ejercicios_css/ejercicio_12.html">Ejercicio 12</a></li>
+            <li><a href="ejercicios_css/ejercicio_13.html">Ejercicio 13</a></li>
+            <li><a href="ejercicios_css/ejercicio_14.html">Ejercicio 14</a></li>
+            <li><a href="ejercicios_css/ejercicio_15.html">Ejercicio 15</a></li>
+            <li><a href="ejercicios_css/ejercicio_16.html">Ejercicio 16</a></li>
+        </ul>
+        <p><a href="https://github.com/Oscarif-08/Oscarif-08.github.io/tree/main" target="_blank">Mi página web</a></p>
+    </div>
+
+</body>
+</html>
