--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <style>
         body 
             {font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: rgb(240, 240, 240);
             margin: 0;
             padding: 0;}
         
         #datos 
-            {background-color: #ffccff; /* Color de fondo elegido */
+            {background-color: rgb(255, 204, 255);
             padding: 20px;
             text-align: center;
-            color: #333;}
+            color: rgb(51, 51, 51);}
 
         #ejercicios-html 
-            {background-color: #ffebcd;
+            {background-color: rgb(255, 235, 205);
             padding: 20px;
             font-family: 'Courier New', Courier, monospace;}
 
         #ejercicios-html h2 
-            {color: #333;
+            {color: rgb(51, 51, 51);
             text-align: center;}
 
         #ejercicios-html ul
@@ -36,19 +36,19 @@
 
         #ejercicios-html a 
             {text-decoration: none;
-            color: #0066cc;}
+            color: rgb(0, 102, 204);}
 
         #ejercicios-html a:hover 
             {color: #ff6600;
             text-decoration: underline;}
 
         #ejercicios-css 
-            {background-color: #d3f8e2;
+            {background-color: rgb(211, 248, 226);
             padding: 20px;
             font-family: 'Verdana', sans-serif;}
 
         #ejercicios-css h2 
-            {color: #333;
+            {color: rgb(51, 51, 51);
             text-align: center;}
 
         #ejercicios-css ul
@@ -61,10 +61,10 @@
 
         #ejercicios-css a
             {text-decoration: none;
-            color: #0066cc;}
+            color: rgb(0, 102, 204);}
 
         #ejercicios-css a:hover
-            {color: #ff6600;
+            {color: rgb(255, 102, 0);
             text-decoration: underline;}
     </style>
 </head>
@@ -73,7 +73,7 @@
     <div class="section" id="datos">
         <h1>Mis Datos</h1>
         <p>Soy Oscar Ioo. Esta página contiene enlaces a los ejercicios realizados sobre HTML y CSS.</p>
-        <img src="imagen.jpg" alt="Imagen de presentación">
+        <img src="https://img.freepik.com/vector-premium/presentacion-dibujos-animados-empresario_33070-3643.jpg" alt="Imagen de presentación" width="240" height="230">
     </div>
 
     <div class="section" id="ejercicios-html">
@@ -103,7 +103,7 @@
             <li><a href="ejercicios_css/ejercicio_15.html">Ejercicio 15</a></li>
             <li><a href="ejercicios_css/ejercicio_16.html">Ejercicio 16</a></li>
         </ul>
-        <p><a href="https://github.com/Oscarif-08/Oscarif-08.github.io/tree/main" target="_blank">Mi página web</a></p>
+        <p><a href="https://github.com/Oscarif-08/Oscarif-08.github.io/blob/main/index.html" target="_blank">Mi página web</a></p>
     </div>
 
 </body>
